--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "ngx-pagination": "^6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
