--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chart.js": "^3.8.0",
     "express-fileupload": "^1.4.0",
     "fs-extra": "^10.1.0",
     "ngx-pagination": "^6.0.1",
