ya funciona el tooltip

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-tippy": "0.0.3",
     "chart.js": "^3.8.0",
     "express-fileupload": "^1.4.0",
     "fs-extra": "^10.1.0",
+    "ng2-tooltip-directive": "^2.10.3",
     "ngx-pagination": "^6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
