--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b1674560-41fb-474b-9d7a-9eb6c6cf9968"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
