--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^10.1.0",
     "ng2-tooltip-directive": "^2.10.3",
     "ngx-pagination": "^6.0.1",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
